--- a/src/components/LgsDraggable/css/index.scss
+++ b/src/components/LgsDraggable/css/index.scss
@@ -1,10 +1,16 @@
 .vui__layer{
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
-  outline: none;
-  position: fixed;
-  z-index: 500;
-  min-width: 250px;
-  min-height: 65px;
+  .vlayer__wrap{
+    box-sizing: border-box;
+    outline: none;
+    position: fixed;
+    min-width: 500px;
+    min-height: 650px;
+    .vlayer__wrap-tit{
+      height: 35px;
+      line-height: 35px;
+      
+    }
+  }
 }
