--- a/src/components/LgsDraggable/css/index.scss
+++ b/src/components/LgsDraggable/css/index.scss
@@ -1,16 +1,29 @@
-.vui__layer{
+@import './variables.scss';
+@import './theme.scss';
+
+.lgs-drag__layer {
   padding: 0;
   margin: 0;
-  .vlayer__wrap{
+
+  .lgs-drag__wrap {
     box-sizing: border-box;
     outline: none;
     position: fixed;
     min-width: 500px;
     min-height: 650px;
-    .vlayer__wrap-tit{
+
+    .lgs-drag__wrap-header {
       height: 35px;
       line-height: 35px;
-      
+
+      .lgs-drag-header-close {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width:28px;
+        height:28px;
+        cursor: pointer;
+      }
     }
   }
 }
