--- a/src/components/LgsDraggable/css/index.scss
+++ b/src/components/LgsDraggable/css/index.scss
@@ -15,14 +15,47 @@
     .lgs-drag__wrap-header {
       height: 35px;
       line-height: 35px;
+      user-select: none;
+      cursor: grab;
 
       .lgs-drag-header-close {
         position: absolute;
         right: 0;
         top: 0;
-        width:28px;
-        height:28px;
+        width: 28px;
+        height: 28px;
         cursor: pointer;
+      }
+
+      .lgs-drag-header-box {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        align-content: center;
+
+        .lgs-drag-header-extrabtns,
+        .lgs-drag-header-fixedbtns {
+          display: flex;
+          justify-content: flex-end;
+          align-content: center;
+          cursor: pointer;
+
+          .header-btns {
+            text-align: center;
+            height: 100%;
+            width: 25px;
+            flex-basis: 25px;
+            &:hover{
+              color:white;
+            }
+          }
+        }
+
+        .lgs-drag-header-extrabtns {
+          flex: 1;
+
+        }
       }
     }
   }
