--- a/src/plugins/LgsLayer/css/theme.scss
+++ b/src/plugins/LgsLayer/css/theme.scss
@@ -4,12 +4,17 @@
 $theme in $themes {
   .#{''+$themeName} {
     color: map-get($theme, xlight);
-    background-color: map-get($theme, dark);
+    background-color: map-get($theme, base);
 
   }
 
   .#{''+$themeName}-drag--header {
-    background-color: map-get($theme, xdark);
+    background-color: map-get($theme, deactive);
+    color:map-get($theme, light )
+  }
+  .#{''+$themeName}-drag--header-active {
+    background-color: map-get($theme, dark);
+    color:map-get($theme, xlight )
   }
 
   .#{''+$themeName}-drag--main {
