--- a/src/plugins/LgsLayer/css/animate.scss
+++ b/src/plugins/LgsLayer/css/animate.scss
@@ -1,12 +1,67 @@
+// 全局过渡动画样式
+$directions: rtl,
+ltr,
+ttb,
+btt;
 
-@keyframes fadein {
-  from {
-    opacity: 0;
-    transform: scale(0.5) translate(-100%, -100%);
+.lgs-drag__wrap {
+  &.popui__message {
+
+    // transform: translateX(200%);
+    transition: all .3s;
+  }
+}
+
+// 控制显隐时的过渡
+.lgs-layer-fade {
+
+  &-enter-active,
+  &-leave-active {
+    transition: all .3s;
   }
 
-  to {
+  &-enter-from,
+  &-enter-active,
+  &-enter-to,
+  &-leave-from,
+  &-leave-active,
+  &-leave-to {
+    // overflow: hidden !important;
+  }
+
+  &-enter-from,
+  &-leave-to {
+    opacity: 0;
+  }
+
+  &-enter-to,
+  &-leave-from {
     opacity: 1;
-    transform: scale(1) translate(-50%, -50%);
+
+  }
+
+  &-enter-from,
+  &-leave-to {
+
+
+    @each $direction in $directions {
+      .#{$direction} {
+        @if $direction==ltr {
+          transform: translateX(-100%);
+        }
+
+        @if $direction==rtl {
+          transform: translateX(100%);
+        }
+
+        @if $direction==ttb {
+          transform: translateY(-100%);
+        }
+
+        @if $direction==btt {
+          transform: translateY(100%);
+        }
+      }
+    }
   }
 }
