--- a/src/plugins/LgsLayer/css/index.scss
+++ b/src/plugins/LgsLayer/css/index.scss
@@ -3,23 +3,26 @@
 @import './animate.scss';
 @import './mixins.scss';
 
+
+
 .lgs-drag__layer {
   padding: 0;
   margin: 0;
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  &.lgs-drag__layer-shadebox {
+    width: 100%;
+    height: 100%;
+  }
 
   .lgs-drag__wrap {
     box-sizing: border-box;
     outline: none;
-    position: fixed;
+    position: absolute;
     min-width: 250px;
     overflow: hidden;
-
-    &.popui__message {
-      min-height: 25px;
-      border-radius: 5px;
-      padding: 0 10px;
-    }
 
     .lgs-drag__wrap-header {
       height: 35px;
@@ -39,7 +42,6 @@
           font-size: 16px;
           margin: 0 15px 0 8px;
           flex: 1;
-          min-width: 100px;
           /*文本不换行*/
           white-space: nowrap;
           /*超出部分隐藏*/
@@ -76,15 +78,39 @@
       }
     }
 
+    &.popui__message {
+      min-height: 41px;
+      border-radius: 5px;
+      padding: 0 10px;
+
+      .lgs-drag__wrap-cntbox {
+        height: 100%;
+      }
+    }
+
     .lgs-drag__wrap-cntbox {
       height: calc(100% - 51px);
       margin: 0;
       padding: 8px;
+
       .lgs-drag-msg__group {
         height: 100%;
       }
+
       @include scrollBar;
     }
+    .lgs-drag__resize{
+      width: 7px;
+      height: 7px;
+      background-color: transparent;
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      cursor: nwse-resize;
+      user-select: none;
+    }
+
+
 
     .lgs-drag__wrap-footer {
       height: 50px;
@@ -107,4 +133,13 @@
       }
     }
   }
+}
+
+.lgs-drag__overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .3);
+  position: absolute;
+  top: 0;
+  left: 0;
 }
