--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,10 +1,44 @@
+@import './themes.scss';
+
 // 公共样式
-html,body{
+html,
+body {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
 }
-#app-main{
-position: relative;    
+a{
+    text-decoration: none;
+}
+@each $themeName,
+$theme in $themes {
+    .#{$themeName} {
+        * {
+            &::-webkit-scrollbar {
+
+                /*滚动条整体样式*/
+                width: 6px;
+                /*高宽分别对应横竖滚动条的尺寸*/
+                height: 6px;
+                background-color: map-get($map: $theme, $key: dark);
+            }
+
+            &::-webkit-scrollbar-corner {
+                background-color: transparent;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                /*滚动条里面小方块*/
+                border-radius: 10px;
+                background: map-get($map: $theme, $key: light);
+            }
+
+            &::-webkit-scrollbar-track {
+                /*滚动条里面轨道*/
+                // border-radius: 10px;
+                background: transparent;
+            }
+        }
+    }
 }
