--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,3 @@
 // 组织统一导出样式
-@import './themes.scss';
-@import './variables.scss';
-@import './mixin.scss';
-@import './transition.scss';
-@import './common.scss';
-@import './element-plus/index.scss';
+@use './common.scss';
+@use './element-plus/index.scss';
