--- a/src/styles/element-plus/el-main.scss
+++ b/src/styles/element-plus/el-main.scss
@@ -1,9 +1,11 @@
+@import '../themes.scss';
+
 @each $themeName,
 $theme in $themes {
   .#{$themeName} {
     .el-main {
-      background-color: map-get($theme, base);
-      color: map-get($theme, xlight)
+      background-color: map-get($theme, xlight);
+      color: map-get($theme, dark)
     }
   }
 }
