--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,8 +1,9 @@
 @import './themes.scss';
 
-*{
+* {
     box-sizing: border-box;
 }
+
 // 公共样式
 html,
 body {
@@ -16,33 +17,44 @@ a {
     text-decoration: none;
 }
 
+* {
+    &:hover {
+        &::-webkit-scrollbar {
+            display: block;
+        }
+    }
+
+    &::-webkit-scrollbar {
+        display: none;
+        /*滚动条整体样式*/
+        width: 5px;
+        /*高宽分别对应横竖滚动条的尺寸*/
+        height: 5px;
+        background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-corner {
+        background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        /*滚动条里面小方块*/
+        border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+        /*滚动条里面轨道*/
+        // border-radius: 10px;
+        background: transparent;
+    }
+}
+
 @each $themeName,
 $theme in $themes {
     .#{$themeName} {
         * {
-            &::-webkit-scrollbar {
-
-                /*滚动条整体样式*/
-                width: 7px;
-                /*高宽分别对应横竖滚动条的尺寸*/
-                height: 7px;
-                background-color: transparent;
-            }
-
-            &::-webkit-scrollbar-corner {
-                background-color: transparent;
-            }
-
             &::-webkit-scrollbar-thumb {
-                /*滚动条里面小方块*/
-                border-radius: 10px;
                 background: map-get($map: $theme, $key: light);
-            }
-
-            &::-webkit-scrollbar-track {
-                /*滚动条里面轨道*/
-                // border-radius: 10px;
-                background: transparent;
             }
         }
     }
